# nsu_labs

./: README.md
year-1/c_labs/lab0/src/: main.c
year-1/c_labs/lab1-0/src/: main.c
year-1/c_labs/lab1-1/src/: main.c
year-1/c_labs/lab2/src/: main.c
year-1/c_labs/lab3-0/: todo.txt
year-1/c_labs/lab3-0/src/: main.c
year-1/c_labs/lab3-1/: todo.txt
year-1/c_labs/lab3-1/src/: main.c
year-1/c_labs/lab4/src/: main.c
year-1/c_labs/lab5/src/: bitstream.c  bitstream.h  huffman.c  huffman.h  main.c  priority_queue.c  priority_queue.h  tree.c  tree.h
year-1/c_labs/lab6/src/: avltree.c  avltree.h  main.c
year-1/c_labs/lab7/src/: bool_matrix.c  bool_matrix.h  graph.c  graph.h  main.c
year-1/c_labs/lab8-0/src/: disjoint_set_union.c  (+6 more)
year-2/evmpu/lab1/: lab1.c  run.sh
year-2/evmpu/lab5/: CMakeLists.txt  lab5.cpp
year-2/evmpu/lab6/: lab6.cpp
year-2/evmpu/lab7/: blas.c  novect.c  withsimd.c
year-2/evmpu/lab8/: lab8.cpp  run.sh
year-2/evmpu/lab9/: lab9.cpp
year-2/mat_stat/: raschetka.py
year-2/ooop/cpp_labs/: README.md
year-2/ooop/cpp_labs/Lab1/tests/: CMakeLists.txt  bigIntTest.cpp  build_lcov_report.sh
year-2/ooop/cpp_labs/Lab2/: CMakeLists.txt  README.md  example.life  install.sh
year-2/ooop/cpp_labs/Lab2/src/: cell.cpp  cell.hpp  gameOfLife.cpp  gameOfLife.hpp  main.cpp  rules.cpp  rules.hpp  universe.cpp  universe.hpp
year-2/ooop/cpp_labs/Lab2/tests/: CMakeLists.txt  mechanicsTest.cpp
year-2/ooop/cpp_labs/Lab4/: CMakeLists.txt  README.md  test.csv
year-2/ooop/cpp_labs/Lab4/src/: CSVParser.hpp  main.cpp  tupleUtility.hpp
year-2/oop/java-labs/: README.md
year-2/opp/: opp_lin_priv.ppk
year-2/opp/lab1/: mpi1.c  mpi2.c  run.sh
year-2/opp/lab2/: main.c  run.sh  run_schedule.sh  schedule_auto.c  schedule_dynamic.c  schedule_guided.c  schedule_static.c  with_omp.c  with_omp2.c
year-2/opp/lab3/: lab3.c
year-2/opp/lab4/: lab4.cpp
year-2/opp/lab5/: main.c  task_queue.c  task_queue.h
year-2/vichi/lab1/: CMakeLists.txt  main.cpp
year-2/vichi/lab2/: CMakeLists.txt  main.cpp
year-2/vichi/lab3/: CMakeLists.txt  main.cpp
year-2/vichi/lab4/: CMakeLists.txt
year-2/vichi/lab5/: CMakeLists.txt
year-3/database/: lab1.odb  ВУЗ.odb
year-3/networks/Lab1/: pom.xml
year-3/networks/Lab2/: pom.xml
year-3/networks/Lab3/: pom.xml
year-3/networks/Lab4/: pom.xml
year-3/ooaid/: bot.py  main.py  ooad.asta  result.json
year-3/ooaid/controllers/: State.py  catigories.py  locations.py
year-3/tooi/: main.py  video_frame.py
(+229 files in other folders)
